--- a/styles.css
+++ b/styles.css
@@ -11,21 +11,22 @@ body {
 @keyframes appear {
   from {
     transform: scale(0.5);
+    opacity: 0;
   }
   to {
     transform: scale(1);
+    opacity: 1;
   }
 }
 
 .container {
   opacity: 0;
   transform: scale(0.5);
-  transition: opacity 0.5s, transform 0.5s;
+  animation: none; /* Remove transition to use animation only */
 }
 
 .container.is-visible {
-  opacity: 1;
-  transform: scale(1);
+  animation: appear 0.5s forwards; /* Use forwards to maintain the final state after the animation ends */
 }
 
 .cnct {
@@ -181,8 +182,13 @@ body {
 }
 
 .skills {
-  color: white;
+  color: black;
   font-size: 14px;
+}
+
+.service{
+  background-color: whitesmoke;
+  border-radius: 20%;
 }
 
 .card-body {
